--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,12 @@
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
     "core-js": "^3.8.3",
+    "lodash": "^4.17.21",
     "materialize-css": "^1.0.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vue3-cookies": "^1.0.6",
+    "vuejs-paginate-next": "^1.0.2",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
