--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,13 @@
   "dependencies": {
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
+    "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
     "lodash": "^4.17.21",
     "materialize-css": "^1.0.0",
+    "randomcolor": "^0.6.2",
     "vue": "^3.2.13",
+    "vue-chart-3": "^3.1.8",
     "vue-router": "^4.0.3",
     "vue3-cookies": "^1.0.6",
     "vuejs-paginate-next": "^1.0.2",
